--- a/src/design-tokens.css
+++ b/src/design-tokens.css
@@ -3,87 +3,158 @@
  */
 
 :root {
-  --component-avatar-default-background: #F1F2E5;
-  --component-avatar-bright-yellow-background: #FFD700;
-  --component-avatar-lavender-background: #E6E6FA;
-  --component-avatar-halo-green-background: #7FFF00;
-  --component-avatar-blue-background: #1E90FF;
-  --component-avatar-wax-flower-background: #FFC0CB;
-  --component-avatar-badge-background: #F1F2E5;
-  --component-avatar-badge-border: #F1F2E5;
-  --component-button-primary-background: #FFD700;
-  --component-button-primary-text: #FFFFFF;
-  --component-button-primary-border: #FFD700;
-  --component-button-secondary-background: #E6E6FA;
-  --component-button-secondary-text: #000000;
-  --component-button-secondary-border: #E6E6FA;
-  --component-button-clear-background: transparent;
-  --component-button-clear-text: #FFD700;
-  --component-button-clear-border: transparent;
-  --component-button-contained-background: #FFD700;
-  --component-button-contained-text: #FFFFFF;
-  --component-button-contained-border: #FFD700;
-  --color-midnight-50: #E6F0FA;
-  --color-midnight-100: #CCE1F5;
-  --color-midnight-200: #B2D2EF;
-  --color-midnight-300: #99C3EA;
-  --color-midnight-400: #7FB4E4;
-  --color-midnight-500: #66A5DF;
-  --color-midnight-600: #4C96D9;
-  --color-midnight-700: #3387D4;
-  --color-midnight-800: #1978CE;
-  --color-midnight-900: #0069C9;
-  --color-yellow-50: #FFFDEA;
-  --color-yellow-100: #FFFBD4;
-  --color-yellow-200: #FFF8BE;
-  --color-yellow-300: #FFF6A8;
-  --color-yellow-400: #FFF391;
-  --color-yellow-500: #FFD700;
-  --color-yellow-600: #E6C100;
-  --color-yellow-700: #CCAA00;
-  --color-yellow-800: #B39400;
-  --color-yellow-900: #9A7D00;
-  --color-purple-50: #F6F5FF;
-  --color-purple-100: #ECEBFF;
-  --color-purple-200: #E2E0FF;
-  --color-purple-300: #E6E6FA;
-  --color-purple-400: #CECCFF;
-  --color-purple-500: #C4C2FF;
-  --color-purple-600: #BAB7FF;
-  --color-purple-700: #B0ADFF;
-  --color-purple-800: #A6A3FF;
-  --color-purple-900: #9C99FF;
-  --color-green-50: #F2FDED;
-  --color-green-100: #E5FBDC;
-  --color-green-200: #D8F9CA;
-  --color-green-300: #CBF7B9;
-  --color-green-400: #BEF5A7;
-  --color-green-500: #B1F396;
-  --color-green-600: #A4F184;
-  --color-green-700: #97EF72;
-  --color-green-800: #8AED61;
-  --color-green-900: #7FFF00;
-  --color-waxflower-50: #FFF0ED;
-  --color-waxflower-100: #FFE1DC;
-  --color-waxflower-200: #FFD2CA;
-  --color-waxflower-300: #FFC3B9;
-  --color-waxflower-400: #FFC0CB;
-  --color-waxflower-500: #FFA596;
-  --color-waxflower-600: #FF9684;
-  --color-waxflower-700: #FF8773;
-  --color-waxflower-800: #FF7861;
-  --color-waxflower-900: #FF6950;
-  --color-brand-pink: #FF0C38;
-  --color-brand-blue: #1E90FF;
-  --color-brand-cream: #F1F2E5;
-  --color-brand-primary: #FFD700;
-  --color-brand-secondary: #E6E6FA;
-  --color-brand-accent: #7FFF00;
-  --color-brand-midnight: #0069C9;
-  --color-brand-lavender: #E6E6FA;
-  --color-brand-halo-green: #7FFF00;
-  --color-brand-wax-flower: #FFC0CB;
-  --color-brand-brand-pink: #FF0C38;
-  --color-brand-brand-blue: #1E90FF;
-  --color-brand-brand-cream: #F1F2E5;
+  --component-avatar-default-background: #FFFFFF;
+  --component-avatar-brightyellow-background: #FFD759;
+  --component-avatar-lavender-background: #CDA1FF;
+  --component-avatar-halogreen-background: #63D1A0;
+  --component-avatar-blue-background: #0048C2;
+  --component-avatar-waxflower-background: #FF9364;
+  --component-avatar-badge-background: #FCF8F3;
+  --component-avatar-badge-border: #FCF8F3;
+  --component-button-default-background: #FFD759;
+  --component-button-default-text: #000000;
+  --component-button-default-border: #000000;
+  --component-button-secondary-background: #0B1529;
+  --component-button-secondary-text: #FFFFFF;
+  --component-button-secondary-border: #0B1529;
+  --component-button-destructive-background: #E00C30;
+  --component-button-destructive-text: #FFFFFF;
+  --component-button-destructive-border: #E00C30;
+  --component-button-outlined-background: transparent;
+  --component-button-outlined-text: #000000;
+  --component-button-outlined-border: #000000;
+  --component-button-ghost-background: transparent;
+  --component-button-ghost-text: #000000;
+  --component-button-ghost-border: transparent;
+  --component-button-white-outlined-background: transparent;
+  --component-button-white-outlined-text: #FFFFFF;
+  --component-button-white-outlined-border: #FFFFFF;
+  --component-button-white-ghost-background: transparent;
+  --component-button-white-ghost-text: #FFFFFF;
+  --component-button-white-ghost-border: transparent;
+  --color-blue-50: #E3F1FF;
+  --color-blue-100: #D1E7FE;
+  --color-blue-200: #A3CDFE;
+  --color-blue-300: #75AFFE;
+  --color-blue-400: #5395FD;
+  --color-blue-500: #1B6AFC;
+  --color-blue-600: #1351D8;
+  --color-blue-700: #0D3CB5;
+  --color-blue-800: #082A92;
+  --color-blue-900: #051D78;
+  --color-blue-950: #01114D;
+  --color-bright-yellow-50: #FFFADF;
+  --color-bright-yellow-100: #FFF1C9;
+  --color-bright-yellow-200: #FFEDBA;
+  --color-bright-yellow-300: #FFE291;
+  --color-bright-yellow-400: #FFE06C;
+  --color-bright-yellow-500: #FFD759;
+  --color-bright-yellow-600: #FFC523;
+  --color-bright-yellow-700: #DBA219;
+  --color-bright-yellow-800: #B78211;
+  --color-bright-yellow-900: #93640B;
+  --color-bright-yellow-950: #A4F06;
+  --color-grayscale-50: #F7FAFB;
+  --color-grayscale-100: #EEF3F6;
+  --color-grayscale-200: #E0E6EC;
+  --color-grayscale-300: #D1D8DF;
+  --color-grayscale-400: #B9C3CC;
+  --color-grayscale-500: #879099;
+  --color-grayscale-600: #70757A;
+  --color-grayscale-700: #595C5F;
+  --color-grayscale-800: #3E4042;
+  --color-grayscale-900: #2D2E30;
+  --color-grayscale-950: #1E1F20;
+  --color-grayscale-black: #000000;
+  --color-grayscale-white: #FFFFFF;
+  --color-green-50: #EEFFE9;
+  --color-green-100: #DFFAD6;
+  --color-green-200: #B9F6B0;
+  --color-green-300: #86E382;
+  --color-green-400: #5EC963;
+  --color-green-500: #30A541;
+  --color-green-600: #187637;
+  --color-green-700: #0F5F31;
+  --color-green-800: #094F2D;
+  --color-green-900: #033A20;
+  --color-green-950: #002212;
+  --color-halogreen-50: #DDF2E8;
+  --color-halogreen-100: #CCEADD;
+  --color-halogreen-200: #B2E1CC;
+  --color-halogreen-300: #7FDCB2;
+  --color-halogreen-400: #63D1A0;
+  --color-halogreen-500: #55BC8E;
+  --color-halogreen-600: #3A9D7B;
+  --color-halogreen-700: #257F68;
+  --color-halogreen-800: #16695C;
+  --color-halogreen-900: #115449;
+  --color-halogreen-950: #043630;
+  --color-lavender-50: #F8ECFF;
+  --color-lavender-100: #F1E5FF;
+  --color-lavender-200: #EDDCFF;
+  --color-lavender-300: #E5CDFF;
+  --color-lavender-400: #DCBCFF;
+  --color-lavender-500: #D7B2FF;
+  --color-lavender-600: #CDA1FF;
+  --color-lavender-700: #A075DB;
+  --color-lavender-800: #7751B7;
+  --color-lavender-900: #523393;
+  --color-lavender-950: #381E7A;
+  --color-midnight-50: #ECF5FF;
+  --color-midnight-100: #D8E7F7;
+  --color-midnight-200: #B4CEF0;
+  --color-midnight-300: #84A3D2;
+  --color-midnight-400: #5975A6;
+  --color-midnight-500: #3E527C;
+  --color-midnight-600: #293F6C;
+  --color-midnight-700: #1D305C;
+  --color-midnight-800: #14234D;
+  --color-midnight-900: #0B1529;
+  --color-midnight-950: #060B17;
+  --color-orange-50: #FFF5D5;
+  --color-orange-100: #FFEEB7;
+  --color-orange-200: #FDE19A;
+  --color-orange-300: #FFCD66;
+  --color-orange-400: #FFB93F;
+  --color-orange-500: #FF9800;
+  --color-orange-600: #DB7900;
+  --color-orange-700: #B75E00;
+  --color-orange-800: #934500;
+  --color-orange-900: #7A3400;
+  --color-orange-950: #471E00;
+  --color-red-50: #FFE8E8;
+  --color-red-100: #FDCDCD;
+  --color-red-200: #FFAEAE;
+  --color-red-300: #F56C6A;
+  --color-red-400: #EC4451;
+  --color-red-500: #E00C30;
+  --color-red-600: #B90A27;
+  --color-red-700: #93081F;
+  --color-red-800: #6C0617;
+  --color-red-900: #560311;
+  --color-red-950: #370009;
+  --color-waxflower-50: #FFEBD8;
+  --color-waxflower-100: #FFE0C1;
+  --color-waxflower-200: #FFCAA2;
+  --color-waxflower-300: #FFB67F;
+  --color-waxflower-400: #FF9364;
+  --color-waxflower-500: #F27E4B;
+  --color-waxflower-600: #DB6B49;
+  --color-waxflower-700: #B74932;
+  --color-waxflower-800: #AE3920;
+  --color-waxflower-900: #932B1F;
+  --color-waxflower-950: #511508;
+  --color-gp-red: #DC1438;
+  --color-gp-red-light: #F7BAC5;
+  --color-gp-blue: #0048C2;
+  --color-gp-blue-light: #A4C2F5;
+  --color-gp-cream: #FCF8F3;
+  --color-brand-default: #FFD759;
+  --color-brand-secondary: #0B1529;
+  --color-brand-accent: #30A541;
+  --color-brand-midnight: #0B1529;
+  --color-brand-lavender: #CDA1FF;
+  --color-brand-halogreen: #63D1A0;
+  --color-brand-waxflower: #FF9364;
+  --color-brand-destructive: #E00C30;
 }
