feat: add styled states for buttons, include token updates

--- a/src/design-tokens.css
+++ b/src/design-tokens.css
@@ -12,26 +12,44 @@
   --component-avatar-badge-background: #FCF8F3;
   --component-avatar-badge-border: #FCF8F3;
   --component-button-default-background: #FFD759;
+  --component-button-default-background-hover: #DBA219;
+  --component-button-default-background-disabled: #FFD759;
   --component-button-default-text: #000000;
   --component-button-default-border: #000000;
   --component-button-secondary-background: #0B1529;
+  --component-button-secondary-background-hover: #14234D;
+  --component-button-secondary-background-disabled: #0B1529;
   --component-button-secondary-text: #FFFFFF;
   --component-button-secondary-border: #0B1529;
   --component-button-destructive-background: #E00C30;
+  --component-button-destructive-background-hover: #93081F;
+  --component-button-destructive-background-disabled: #E00C30;
   --component-button-destructive-text: #FFFFFF;
   --component-button-destructive-border: #E00C30;
-  --component-button-outlined-background: transparent;
-  --component-button-outlined-text: #000000;
-  --component-button-outlined-border: #000000;
+  --component-button-outline-background: transparent;
+  --component-button-outline-background-hover: #00000029;
+  --component-button-outline-background-disabled: transparent;
+  --component-button-outline-text: #000000;
+  --component-button-outline-border: #000000;
+  --component-button-outline-border-focus: #0000003D;
   --component-button-ghost-background: transparent;
+  --component-button-ghost-background-hover: #447BCA29;
+  --component-button-ghost-background-disabled: transparent;
   --component-button-ghost-text: #000000;
   --component-button-ghost-border: transparent;
-  --component-button-white-outlined-background: transparent;
-  --component-button-white-outlined-text: #FFFFFF;
-  --component-button-white-outlined-border: #FFFFFF;
+  --component-button-ghost-border-focus: #447BCA3D;
+  --component-button-white-outline-background: transparent;
+  --component-button-white-outline-background-hover: #FFFFFF52;
+  --component-button-white-outline-background-disabled: transparent;
+  --component-button-white-outline-text: #FFFFFF;
+  --component-button-white-outline-border: #FFFFFF;
+  --component-button-white-outline-border-focus: #FFFFFF7A;
   --component-button-white-ghost-background: transparent;
+  --component-button-white-ghost-background-hover: #FFFFFF52;
+  --component-button-white-ghost-background-disabled: transparent;
   --component-button-white-ghost-text: #FFFFFF;
   --component-button-white-ghost-border: transparent;
+  --component-button-white-ghost-border-focus: #FFFFFF7A;
   --color-blue-50: #E3F1FF;
   --color-blue-100: #D1E7FE;
   --color-blue-200: #A3CDFE;
@@ -149,6 +167,12 @@
   --color-gp-blue: #0048C2;
   --color-gp-blue-light: #A4C2F5;
   --color-gp-cream: #FCF8F3;
+  --color-states-hover-black: #00000029;
+  --color-states-hover-primary: #447BCA29;
+  --color-states-hover-white: #FFFFFF52;
+  --color-states-focus-black: #0000003D;
+  --color-states-focus-primary: #447BCA3D;
+  --color-states-focus-white: #FFFFFF7A;
   --color-brand-default: #FFD759;
   --color-brand-secondary: #0B1529;
   --color-brand-accent: #30A541;
@@ -157,4 +181,15 @@
   --color-brand-halogreen: #63D1A0;
   --color-brand-waxflower: #FF9364;
   --color-brand-destructive: #E00C30;
+  --color-brand-hover-secondary: #DBA219;
+  --color-brand-hover-primary: #14234D;
+  --color-brand-hover-destructive: #93081F;
+  --color-brand-hover-outline: #00000029;
+  --color-brand-hover-ghost: #447BCA29;
+  --color-brand-hover-white-outline: #FFFFFF52;
+  --color-brand-hover-white-ghost: #FFFFFF52;
+  --color-brand-focus-outline: #0000003D;
+  --color-brand-focus-ghost: #447BCA3D;
+  --color-brand-focus-white-outline: #FFFFFF7A;
+  --color-brand-focus-white-ghost: #FFFFFF7A;
 }
