feat: typography support

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import './design-tokens.css';
 @import './tailwind-theme.css';
+@import './typography.css';
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
