task checkbox and stories created

--- a/src/design-tokens.css
+++ b/src/design-tokens.css
@@ -104,6 +104,7 @@
   --color-waxflower-800: #D84315;
   --color-waxflower-900: #BF360C;
   --color-waxflower-950: #8D2A0A;
+  --custom-default-focus: #a3a3a380;
   --border-radius-none: 0px;
   --border-radius-sm: 4px;
   --border-radius-base: 8px;
